--- a/index.css
+++ b/index.css
@@ -44,7 +44,7 @@ body {
 
 .img-section {
   position: relative;
-  background-image: url(/images/bg-pattern-desktop.svg);
+  background-image: url(./images/bg-pattern-desktop.svg);
   background-repeat: no-repeat;
   background-position: 122% 66%;
   overflow: hidden;
@@ -140,7 +140,7 @@ hr {
 
   .img-section {
     position: relative;
-    background-image: url(/images/bg-pattern-mobile.svg);
+    background-image: url(./images/bg-pattern-mobile.svg);
     background-repeat: no-repeat;
     background-position: 50% 0%;
     overflow: visible;
